# synapse-project

./: MESON_PORT.md  meson.build  meson_options.txt
src/: meson.build
src/core/: meson.build
src/plugins/: meson.build
src/ui/: meson.build
vapi/: meson.build
