option('enable-librest', 
    type: 'boolean', 
    value: true, 
    description: 'Build support for plugins using librest'
)

option('enable-indicator', 
    type: 'boolean', 
    value: true, 
    description: 'Build support for application indicators'
)

option('enable-zeitgeist', 
    type: 'boolean', 
    value: true, 
    description: 'Build with zeitgeist support'
)
