synapse_modules_vala_flags = [
    '--pkg gdk-x11-3.0',
    '--pkg gtk+-3.0',
    '--pkg gio-2.0',
    '--pkg gio-unix-2.0',
    '--pkg gee-0.8',
    '--pkg json-glib-1.0',
    '--pkg keybinder-3.0',
    '--pkg libnotify'
]

synapse_common_vala_flags = [
    '--target-glib=2.40',
    '--thread',
    '-g'
]

subdir('core')
subdir('ui')
subdir('plugins')
