files('banshee-plugin.vala',
    'calculator-plugin.vala',
    'chat-actions-plugin.vala',
    'chromium-plugin.vala',
    'command-plugin.vala',
    'file-op-plugin.vala',
    'desktop-file-plugin.vala',
    'devhelp-search.vala',
    'ssh-plugin.vala',
    'dictionary.vala',
    'directory-plugin.vala',
    'gnome-bookmarks-plugin.vala',
    'gnome-session-plugin.vala',
    'screensaver-plugin.vala',
    'hello-world-plugin.vala',
    'hybrid-search-plugin.vala',
    'launchpad-plugin.vala',
    'locate-plugin.vala',
    'opensearch.vala',
    'pass-plugin.vala',
    'tomboy-notes-plugin.vala',
    'gnote-plugin.vala',
    'pastebin-plugin.vala',
    'pidgin-plugin.vala',
    'rhythmbox-plugin.vala',
    'selection-plugin.vala',
    'test-slow-plugin.vala',
    'xnoise-media-player-plugin.vala',
    'system-management.vala',
    'zeal-plugin.vala',
    'zim-plugin.vala',
    'rolldice-plugin.vala'
)
