files('synapse-main.vala',
    'keybindings.vala',
    'category.vala',
    'interfaces.vala',
    'controller.vala',
    'model.vala',
    'view-base.vala',
    'view-default.vala',
    'view-essential.vala',
    'view-doish.vala',
    'view-side-doish.vala',
    'view-virgilio.vala',
    'widgets.vala',
    'widgets-matchlistview.vala',
    'icon-cache-service.vala',
    'utils.vala',
    'settings.vala',
    'tile-view/abstract-tile-object.vala',
    'tile-view/tile.vala',
    'tile-view/tile-view.vala',
    'tile-view/wrap-label.vala'
)
